buzz/tests/trybuild/route_self_arg.stderr
error: macros that expand to items must be delimited with braces or followed by a semicolon
 --> tests/trybuild/route_self_arg.rs:3:1
  |
3 | #[get("/self-arg")]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Found self in args which is not allowed
 --> tests/trybuild/route_self_arg.rs:3:1
  |
3 | #[get("/self-arg")]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
