buzz/tests/trybuild/route_self_arg.rs
use buzz::prelude::*;

#[get("/self-arg")]
fn self_arg(self) {
}

fn main() {}
